!feat(video): hover and fetch dict from youdao
