# backend/pkg/handlers/authmid/auth.go
@@ -5,6 +5,7 @@ import (
 	"backend/pkg/models"
 
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 )
 
 
@@ -17,20 +18,23 @@ import (
 // @Success 200 {object} models.TokenResponse
 // @Failure 401 {object} models.ErrorMsg
 // @Router /api/auth/token [post]
-func GetToken(c *gin.Context) {
-	apiKey := c.GetHeader("X-API-Key")
-	valid := auth.APIKeyValidate(apiKey)
-	if valid {
-		token, err := auth.GenerateToken(apiKey)
-		if err != nil {
-			c.JSON(500, models.ErrorMsg{Error: "Failed to generate token"})
-			return
+func GetToken(db *gorm.DB) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		apiKey := c.GetHeader("X-API-Key")
+		valid := auth.APIKeyValidate(apiKey)
+		if valid {
+			token, err := auth.GenerateToken(apiKey)
+			if err != nil {
+				c.JSON(500, models.ErrorMsg{Error: "Failed to generate token"})
+				return
+			}
+			c.JSON(200, models.TokenResponse{
+				Token:     token,
+				ExpiresIn: int(auth.TokenExpiration.Seconds()),
+			})
+		} else {
+			c.JSON(401, models.ErrorMsg{Error: "Invalid API Key"})
 		}
-		c.JSON(200, models.TokenResponse{
-			Token:     token,
-			ExpiresIn: int(auth.TokenExpiration.Seconds()),
-		})
-	} else {
-		c.JSON(401, models.ErrorMsg{Error: "Invalid API Key"})
 	}
 }
+
